# tauri-toolbox

./: GITHUB_ACTIONS.md  INSTALL_RUST.md  QUICKSTART.md  README.md  SETUP.md  index.html  package-lock.json  package.json
.github/workflows/: build-on-commit.yml  release.yml
scripts/: sync-version.js  update-version.js
src/: App.jsx  main.js  navigation.js  settings.js  style.css  upscale.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  main.rs
src/components/: Navigation.jsx
src/components/utilities/: CameraControl.jsx  ExtractSound.jsx  FrameToFrameVideo.jsx  ImageTags.jsx  ImageToPose.jsx  LoopVideo.jsx  NanoEditPro.jsx  OverlaySoundOnVideo.jsx  QwenEditPlus.jsx  RemoveBackground.jsx  ReverseVideo.jsx  StyleTransfer.jsx  Upscale.jsx  VideoUpscale.jsx  WebPToPNG.jsx
src/contexts/: AppContext.jsx  TabsStateContext.jsx  TasksContext.jsx
src/hooks/: useDragAndDrop.js  useTauri.js
src/pages/: AIPage.jsx  SettingsPage.jsx  TasksPage.jsx  ToolsPage.jsx
src/utils/: fileUtils.js  imageUtils.js  notifications.js
